# deneb-alpha

./: .gitignore  README.md  config.yml  containers.py  main.py  pyproject.toml
container/: clustering.py  create_file.py  delete_file.py  file_post.py  fluctuation.py  get_file.py  get_files.py  read_files.py  register_file.py
domain/: clusters.py  feature_data.py  feature_file.py  ftest_config.py  multipletest_config.py
domain/interface/: create_file.py  delete_file.py  dissimilarity.py  feature_data.py  feature_file.py  feature_file_repository.py  get_file.py  get_files.py  multipletest_config.py  network.py  output_fluctuation.py  post_file.py  register_file.py  session_handler.py
infrastructure/: error.py  feature_data_repository.py  feature_file_repository.py  session_handler.py
infrastructure/model/: models.py  schemas.py
medium/ef819d53/: ftest.csv
src/: config.yml  serve.py
src/container/: delete_file.py  dissimilarity.py  register_file.py
src/domain/: abslinear_config.py  cluster.py  clustering_config.py  clusters.py  data_dir.py  dissimilarity_config.py  dissimilarity_metric.py  feature_data.py  fluctuation_method.py  ftest_config.py  levene_test_config.py  mad_ftest_config.py  mad_ratio_config.py  (+6 more)
testdata/: create_test_table.py  test_table.csv  test_table_uniform.csv
tests/: conftest.py
usecase/: abslinear.py  create_file.py  delete_file.py  dissimilarity.py  fluctuation.py  ftest.py  get_file.py  get_files.py  multipletest.py  output_clustering.py  output_correlation.py  output_fluctuation.py  post_file.py  read_files.py  register_file.py
(+79 files in other folders)
