[tool.poetry]
name = "deneb-alpha"
version = "0.1.0"
description = ""
authors = ["byeron <disce.uno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
dependency-injector = "^4.41.0"
typer = "^0.9.0"
typer-cloup = "^0.11.0"
sqlalchemy = "^2.0.22"
pyyaml = "^6.0.1"
pandas = "^2.1.1"
scipy = "^1.11.3"
statsmodels = "^0.14.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
